Fix account page inputs going out of bounds, fixed title widths

--- a/src/components/account-page/components/Username.scss
+++ b/src/components/account-page/components/Username.scss
@@ -1,12 +1,15 @@
 .usernameContainer {
     display: flex;
     align-items: flex-end;
-    line-height: 1;
     justify-self: start;
 }
 .username {
-    font-size: 2rem;
+    font-size: 1.6rem;
     margin-right: .5rem;
+    white-space: nowrap;
+    max-width: 10rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 @media (max-width: 800px) {
