--- a/src/components/divider/Divider.scss
+++ b/src/components/divider/Divider.scss
@@ -2,7 +2,7 @@
 
 .line {
     height: 2px;
-    background-color: $placeholderColor;
+    background-color: $borderColorLight;
     position: relative;
     margin: 1.5rem 0;
     align-self: center;
