--- a/src/components/landing/Landing.scss
+++ b/src/components/landing/Landing.scss
@@ -301,6 +301,7 @@ ul.cardInfo {
     }
     .title {
         font-size: 2rem;
+        max-width: 100%;
     }
     .spinner {
         top: auto;
