--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -1,3 +1,5 @@
+@import "../../consts/mediaQueries.scss";
+
 .container {
     display: flex;
     flex-direction: column;
@@ -12,4 +14,10 @@
 }
 .extraSpace {
     padding: 2rem;
+}
+
+@media (max-width: $mqTabletWidth) {
+    .extraSpace {
+        padding: 1rem;
+    }
 }
